Waveform version update, region z-index fix

--- a/h5p-editor-waveform/styles/waveform.css
+++ b/h5p-editor-waveform/styles/waveform.css
@@ -13,6 +13,10 @@
     border-radius: 4px;
 }
 
+.wavesurfer-region {
+    z-index: 100;
+}
+
 /* .playRegion {
     position: absolute;
     right: 0%;
